Fixed dropdown border issue and border for scrollbar

--- a/assets/main.css
+++ b/assets/main.css
@@ -201,8 +201,8 @@ a,
 .dropdown-menu {
 	width: 318px;
 	height: 440px;
-	border: 4px solid #fff;
-	border-radius: 12px;
+	border: 1px solid #cdcdcd;
+	border-radius: 7px;
 	-webkit-box-shadow: 0 0 4px 1px #dadce0;
 	padding: 12px;
 	overflow: scroll;
@@ -211,9 +211,9 @@ a,
 	flex-direction: column;
 	vertical-align: none;
 	align-items: center;
-	position: absolute;
-	right: -18px;
-	top: 60px;
+	position: fixed;
+	right: 15px;
+	top: 66px;
 	background: #fff;
 }
 
@@ -248,6 +248,8 @@ a,
 	grid-column: 1 / 4;
 }
 
+/* DROPDON BUTTON */
+
 .dropdown-btn {
 	padding-top: 20px;
 }
@@ -265,15 +267,16 @@ a,
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
-	width: 8px;
+	width: 15px;
 }
 ::-webkit-scrollbar-track {
 	background: #fff;
-	border-radius: 12px;
+	border-radius: 8px;
 }
 ::-webkit-scrollbar-thumb {
 	background: #dadce0;
 	border-radius: 12px;
+	border: 4px solid #fff;
 }
 
 .dropdown-menu{
